syntax = "proto3";

package proto;

option go_package = "./pkg/proto";

import "google/api/annotations.proto";
  
service Intern {
	rpc GetInternInfo(GetInternInfoReq) returns (GetInternInfoResponse){
		option (google.api.http) = {
			get: "/intern"
		};
	}
}

message GetInternInfoReq {
	string name = 1;
}

message GetInternInfoResponse {
	string name = 1;
	string domain = 2;
	string hub = 3;
}